--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ropod_bringup)
+project(ropod_tue_1_bringup)
 
 find_package(catkin REQUIRED COMPONENTS
     message_generation
