--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,8 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>robot_common</build_depend>
-  <run_depend>robot_common</run_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>  
+  <run_depend>tf2_geometry_msgs</run_depend>
+  <run_depend>tf2_geometry_msgs</run_depend>
 
 </package>
