--- a/parameters/hardware/laser_parameters.yaml
+++ b/parameters/hardware/laser_parameters.yaml
@@ -1,4 +1,3 @@
-serial_port: /dev/ttyACM4
-frame_id: /ropod/laser/scan
-angle_min: -2.0
-angle_max: 2.0
+hostname: 192.168.44.229
+port: 2112
+timelimit: 5
